k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: montrack-api
  namespace: default
  labels:
    app: montrack-api
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: montrack-api
  template:
    metadata:
      labels:
        app: montrack-api
    spec:
      serviceAccountName: build-robot
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: montrack-api
          image: asia-southeast2-docker.pkg.dev/sepasangselamanya/montrack-api/montrack-api:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 5
            timeoutSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
              scheme: HTTP
            initialDelaySeconds: 60
            successThreshold: 1
            failureThreshold: 5
            timeoutSeconds: 30
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
