k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: montrack-api-service
  namespace: montrack
spec:
  type: LoadBalancer
  selector:
    app: montrack-api
  port: 
    - name: http
      port: 80
      targetPort: 8080
