k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: montrack-api-ingress
  annotations:
      kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: montrack-api-service
            port:
              number: 80
